"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-09-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-19-module-03:
	  module: now using process_definition::__unroll_complete_type()
	  completed value_placeholder::dump()
	  Some trouble with unroll-assigning formal parameters because
		not all definition types have footprints!
		This causes assert fail where expecting footprint, obviously.
	  Object/traits/class_traits_type.cc:
		mutually attached pint_instantiation_statement to 
		pint_value_placeholder for the int::width template formal.
	  Next: make definitions have footprints [manager], even the 
		simple built-in ones, for the sake of consistency, 
		will probably do on branch.


	* HACKT-00-01-04-main-00-80-03-instance-00-19-module-02:
	  More #if MODULE_PROCESS implementation code.
	  It compiles, but don't expect it to run successfully yet!
	  Next: rewrite module methods to re-use process_definition code.


2006-09-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-19-module-01:
	  This child branch intended to refactor the module class to 
		work like a process_definition (nullary_template)
		and reuse the same functionality.
	  This revision only changed the module.h header, and does not compile.


2006-09-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-19-merged-template-02:
	  Child branch merge: rework unroll_context, disabled some
		static analysis, tested template typedef parameter unrolling,
		disabled tests after compile-phase.


2006-09-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03-instance-00-18-template-02:
	  Tests: temporarily disabled all tests except for pre-unroll
		compile-phase tests.
	  Compile-time regressions ALL addressed/fixed, 