@@ -2,7 +2,7 @@
 	\file "Object/def/datatype_definition_alias.h"
 	Definition-related HAC object classes.  
 	This file came from "Object/art_object_definition_data.h".
-	$Id: datatype_definition_alias.h,v 1.7 2006/06/02 20:15:17 fang Exp $
+	$Id: datatype_definition_alias.h,v 1.7.16.1 2006/09/28 22:37:22 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEF_DATATYPE_DEFINITION_ALIAS_H__
@@ -70,6 +70,11 @@ public:
 	MAKE_CANONICAL_DATA_TYPE_REFERENCE_PROTO;
 
 	MAKE_CANONICAL_DATA_TYPE_PROTO;
+
+#if DEFINITION_FOOTPRINTS
+	good_bool
+	must_be_valid_template_actuals(const template_actuals&) const;
+#endif
 
 	good_bool
 	require_signature_match(const never_ptr<const definition_base> d) const;
