@@ -2,7 +2,7 @@
 	\file "Object/def/process_definition_alias.h"
 	Process-definition-related HAC object classes.  
 	This file came from "Object/art_object_definition_proc.h".
-	$Id: process_definition_alias.h,v 1.7 2006/06/02 20:15:19 fang Exp $
+	$Id: process_definition_alias.h,v 1.7.16.1 2006/09/28 22:37:29 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEF_PROCESS_DEFINITION_ALIAS_H__
@@ -68,6 +68,10 @@ public:
 
 	MAKE_CANONICAL_PROCESS_TYPE_PROTO;
 
+#if DEFINITION_FOOTPRINTS
+	good_bool
+	must_be_valid_template_actuals(const template_actuals&) const;
+#endif
 public:
 	FRIEND_PERSISTENT_TRAITS
 	PERSISTENT_METHODS_DECLARATIONS
