@@ -3,7 +3,7 @@
 	Type-reference class method definitions.  
 	This file originally came from "Object/art_object_type_ref.cc"
 		in a previous life.  
- 	$Id: type_reference.cc,v 1.17.2.3.2.1 2006/09/28 19:50:38 fang Exp $
+ 	$Id: type_reference.cc,v 1.17.2.3.2.1.2.1 2006/09/28 22:37:34 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_TYPE_TYPE_REFERENCE_CC__
@@ -358,11 +358,12 @@ data_type_reference::is_accepted_in_channel(void) const {
 good_bool
 data_type_reference::must_be_valid(void) const {
 	STACKTRACE_VERBOSE;
-#if ENABLE_STACKTRACE
-	this->dump(cerr << "whoami: ") << endl;
-#endif
+#if DEFINITION_FOOTPRINTS
+	return base_type_def->must_be_valid_template_actuals(template_args);
+#else
 	return base_type_def->get_template_formals_manager()
 		.must_validate_actuals(template_args);
+#endif
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -1328,8 +1329,12 @@ channel_type_reference::is_canonical(void) const {
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 good_bool
 channel_type_reference::must_be_valid(void) const {
+#if DEFINITION_FOOTPRINTS
+	return base_chan_def->must_be_valid_template_actuals(template_args);
+#else
 	return base_chan_def->get_template_formals_manager()
 		.must_validate_actuals(template_args);
+#endif
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -1661,8 +1666,12 @@ process_type_reference::is_accepted_in_channel(void) const {
  */
 good_bool
 process_type_reference::must_be_valid(void) const {
+#if DEFINITION_FOOTPRINTS
+	return base_proc_def->must_be_valid_template_actuals(template_args);
+#else
 	return base_proc_def->get_template_formals_manager()
 		.must_validate_actuals(template_args);
+#endif
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -1681,7 +1690,7 @@ process_type_reference::make_unroll_context(void) const {
 /**
 	Makes a copy of this type reference, but with strictly resolved
 	constant parameter arguments.  
-	NOTE: this procudure will be the model for data and channel types'
+	NOTE: this procedure will be the model for data and channel types'
 		unroll_resolve, so perfect this first!
 	TODO: resolve data-type aliases (may already be done now)
 	\return a copy of itself, but with type parameters resolved, 
